--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -21,6 +21,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prettier": "^3.5.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "^5"
   }
 }
