feat: nuxtの環境を削除

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
 # API用のURL
-API_BASE_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
 
-API_TEST_URL=https://api.open-meteo.com/v1/forecast
+NEXT_PUBLIC_API_TEST_URL=https://api.open-meteo.com/v1/forecast
