--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,5 +1,3 @@
 {
-  "importOrder": ["<THIRD_PARTY_MODULES>", "^@", "^~", "^[./]"],
-  "semi": true,
-  "trailingComma": "all"
+  "plugins": ["prettier-plugin-organize-imports"]
 }
