--- a/frontend/.vscode/extensions.json
+++ b/frontend/.vscode/extensions.json
@@ -1,10 +1,9 @@
 {
     "recommendations": [
         "esbenp.prettier-vscode",
-        "vue.vscode-typescript-vue-plugin",
-        "vue.volar",
         "dbaeumer.vscode-eslint",
         "streetsidesoftware.code-spell-checker",
-        "ms-vscode-remote.remote-wsl"
+        "ms-vscode-remote.remote-wsl",
+        "qcz.text-power-tools"
     ]
 }
