--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: backend
     entrypoint: /app/entrypoint.sh
-    command: watchfiles "python manage.py runserver 0.0.0.0:8000" .
+    command: watchfiles "python src/manage.py runserver 0.0.0.0:8000" .
     volumes:
       - ./backend:/app
       - /app/.ruff_cache
