--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "psycopg[binary] ~= 3.2",
     "ruff ~= 0.12",
     "watchfiles ~= 1.1.0",
+    "djangorestframework-simplejwt ~= 5.5",
 ]
 
 [tool.ruff]
