--- a/compose.yml
+++ b/compose.yml
@@ -38,6 +38,7 @@ services:
       - 3000:3000
     environment:
       - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+      - INTERNAL_API_BASE_URL=${INTERNAL_API_BASE_URL}
       - NEXT_PUBLIC_API_TEST_URL=${NEXT_PUBLIC_API_TEST_URL}
 
   pgsql:
