--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
 # General Settings
-PYTHONUNBUFFERED=1
-
 DJANGO_ADMIN_USER=admin
 DJANGO_ADMIN_PASS=
 
@@ -13,4 +11,7 @@ DB_PORT=5432
 
 # NextJS Frontend Settings
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
+INTERNAL_API_BASE_URL=http://backend:8000/api
 NEXT_PUBLIC_API_TEST_URL=https://api.open-meteo.com/v1/forecast
+
+JWT_SECRET_KEY=
