--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "http-status-codes": "^2.3.0",
+    "jose": "^6.0.12",
     "next": "15.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
