feat: 機能修正Dockerfile,composeの修正
- バリデーション機能の修正

- ファイル移動

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "next": "15.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "url-join": "^5.0.0"
+    "url-join": "^5.0.0",
+    "zod": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
