--- a/compose.yml
+++ b/compose.yml
@@ -28,11 +28,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: frontend
-    command: pnpm dev
+    command: npm run dev
     volumes:
       - ./frontend:/app
       - /app/node_modules
-      - /app/.pnpm-store
       - /app/.next
     ports:
       - 3000:3000
