--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,7 @@
-FROM oven/bun:1.2-alpine
+FROM node:24-alpine
 
 WORKDIR /app
 
-COPY package.json bun.lockb* ./
+COPY package*.json ./
 
-RUN bun install
-
-COPY . .
+RUN npm install
