--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -13,5 +13,5 @@
     "editor.formatOnSave": true
   },
   "files.encoding": "utf8",
-  "files.trimTrailingWhitespace": true,
+  "files.trimTrailingWhitespace": true
 }
