--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,18 @@
 FROM python:3.13-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-RUN pip install uv
+# uv をインストール（pipのキャッシュは使わない）
+RUN pip install --no-cache-dir uv
 
-COPY pyproject.toml ./
+# 依存のみ先にコピーしてレイヤーキャッシュを効かせる
+COPY requirements.txt ./
 
-RUN uv pip install --system --no-cache .
+# 指定どおり requirements.txt からシステム環境へインストール
+RUN uv pip install --system -r requirements.txt
+
+# アプリ本体をコピー
+COPY . .
