--- a/compose.yml
+++ b/compose.yml
@@ -11,17 +11,12 @@ services:
     ports:
       - 8000:8000
     environment:
-      - DJANGO_RUNSERVER_HIDE_WARNING=true
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - ADMIN_USER=${DJANGO_ADMIN_USER}
-      - ADMIN_PASS=${DJANGO_ADMIN_PASS}
-      - SECRET_KEY=${JWT_SECRET_KEY}
+      DJANGO_RUNSERVER_HIDE_WARNING: "true"
+    env_file:
+      - ./backend/.env
     depends_on:
-      - pgsql
+      pgsql:
+        condition: service_healthy
 
   frontend:
     build:
@@ -35,30 +30,31 @@ services:
       - /app/.next
     ports:
       - 3000:3000
-    environment:
-      - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
-      - INTERNAL_API_BASE_URL=${INTERNAL_API_BASE_URL}
-      - NEXT_PUBLIC_API_TEST_URL=${NEXT_PUBLIC_API_TEST_URL}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
   pgsql:
     image: postgres:17-alpine
     container_name: pgsql
     volumes:
       - postgres-data:/var/lib/postgresql/data/
+    env_file:
+      - ./backend/.env
     ports:
-      - ${DB_PORT}:5432
-    environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB -h 127.0.0.1"]
+      interval: 5s
+      timeout: 5s
+      retries: 15
+      start_period: 5s
 
   pgweb:
     image: sosedoff/pgweb
     container_name: pgweb
     ports:
       - 8081:8081
-    environment:
-      - PGWEB_DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=disable
+    env_file:
+      - ./backend/.env
+    entrypoint: /bin/sh
+    command: -c "PGWEB_DATABASE_URL=postgres://$${POSTGRES_USER}:$${POSTGRES_PASSWORD}@$${POSTGRES_HOST}:$${POSTGRES_PORT}/$${POSTGRES_DB}?sslmode=disable pgweb"
     depends_on:
       - pgsql
 
